--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         tools:context="id.sch.smktelkom_mlg.tugas01.xirpl5001.tugas001.MainActivity">
 
         <TextView
-            android:id="@+id/nm"
+            android:id="@+id/ttl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#3bdac8"
@@ -34,30 +34,30 @@
             android:src="@android:drawable/ic_menu_myplaces" />
 
         <TextView
-            android:id="@+id/kls"
+            android:id="@+id/tvnm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nama Lengkap" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/nm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvkls"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Kelas" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/kls"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tvjeke"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -87,7 +87,7 @@
         </RadioGroup>
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tvstts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -109,7 +109,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/linearLayout" />
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvlomb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Jenis lomba yang dipilih" />
@@ -151,7 +151,7 @@
             android:text="Daftar" />
 
         <TextView
-            android:id="@+id/vadat"
+            android:id="@+id/tvlmb"
             style="@style/Base.TextAppearance.AppCompat.Subhead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
